src/test/ui/save-analysis/issue-68621.stderr
error: could not find defining uses
  --> $DIR/issue-68621.rs:14:19
   |
LL |     type Future = impl Trait;
   |                   ^^^^^^^^^^

error: aborting due to previous error

